Improve view user page.

--- a/http/static/styles.css
+++ b/http/static/styles.css
@@ -1,1 +1,1 @@
-/* * SPDX-FileCopyrightText: 2025 maxhash.io <dev @maxhash.io> * * SPDX-License-Identifier: AGPL-3.0-only */ section { margin-bottom: 3rem; }
+/* * SPDX-FileCopyrightText: 2025 maxhash.io <dev @maxhash.io> * * SPDX-License-Identifier: AGPL-3.0-only */ section { margin-bottom: 3rem; } .grid-item { margin-bottom: 1rem; } 
